welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:2: error: not found: value ab
	if (ab==10 || ac==10 || bc==10) {
            ^blueTicket:7: error: not found: value ab
	if ( ab==10* ac || ab==10* bc ) {
             ^blueTicket:7: error: type mismatch;
 found   : Unit
 required: Int
	if ( ab==10* ac || ab==10* bc ) {
        ^